# fastapi-autogen-team

./: .dockerignore  .gitignore  .stignore  Dockerfile  README.md  dockerignore  fastapi_autogen_team.html  flaml-tree.txt  invoke.yaml  okteto.yaml  poetry.toml  pyproject.toml  requirements.txt  run.bat  run.sh  search.js  tree.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup/: action.yml
.github/workflows/: check.yml  docs-to-wiki.yml  gitops-trigger.yml  publish.yml
Settings/: autogen_env.yaml
app/: autogen_server.py  autogen_workflow_team.py  main.py
docs/: Home.md  fastapi_autogen_team.html  gitops_deployment.md  index.html  search.js  user_stories_main.md
docs/fastapi_autogen_team/: autogen_server.html  autogen_workflow_team.html  data_model.html  main.html
documentation/: backlog_project.md  user_stories_data_model.md  user_stories_main.md
experiments/: Semi_structured_and_multi_modal_RAG.ipynb  confluence.ipynb  docling.ipynb  jira.ipynb  litellm_test.ipynb  semantic-chunker.ipynb  tools.ipynb
fastapi_autogen_team/: autogen_server.html  autogen_workflow_team.html  data_model.html  main.html  tool.html
k8s/base/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml  replicas-patch.yaml
k8s/overlays/gitops/: kustomization.yaml  sealed-secret.yaml
src/fastapi_autogen_team/: autogen_server.py  autogen_workflow_team.py  data_model.py  main.py  tool.py
tasks/: __init__.py  checks.py  projects.py
tests/: test_autogen_server.py  test_autogen_workflow_team.py  test_data_model.py  test_main.py
tests/integration/: test_main.py
tests/unit/: test_autogen_workflow_team.py  test_tool.py
wiki/: chat_completion_sequence.plantuml  classes_fastapi_autogen_team.plantuml  packages_fastapi_autogen_team.plantuml  user_stories_autogen_server.md  user_stories_autogen_workflow_team.md
